@@ -8,6 +8,7 @@ FEATURE: Core | Plugins can be disabled from starting up [TuxPaper]
 FEATURE: Core | Separate high-speed transfer rates between peers within the local LAN [Parg,Nolar]
 FEATURE: Core | Encrypted peer connections [Parg,Nolar]
 FEATURE: Core | Revamped and much improved piece-picking code [MjrTom]
+FEATURE: Core | Option to bind outgoing connections to the same local port, may help with NAT router instability [Nolar]
 FEATURE: Plug | HTTP webseed support (http://www.getright.com/seedtorrent.html) [Parg]
 FEATURE: Plug | New "team seeder" plugin [Parg]
 FEATURE: Dev  | Plugins can now add views/tabs to Torrent Details, Peers View, etc [TuxPaper]
@@ -28,6 +29,7 @@ CHANGE: Core  | Only one torrent can now be checking at a time [Parg]
 CHANGE: Core  | DHT size estimation improved [Parg]
 CHANGE: Core  | Default listen port number now randomized for new installs [Nolar]
 CHANGE: Core  | Interrupted "seeding+checking" files now rechecked on startup [Parg]
+ChANGE: Core  | Under unix, use all-lowercase ~/.azureus/ as the config dir [Nolar]
 CHANGE: UI    | Sedding+checking completeness now shown in status [Parg]
 CHANGE: UI    | Faster filling of tables (Mac/some Linux) [TuxPaper]
 CHANGE: UI    | Opening torrents changed to use one opener dialog (w/options to change destination filenames, disable files, etc) [TuxPaper]
